[package]
name = "gll"
version = "0.0.2"
authors = [
    "Ana-Maria <mihalacheana.maria@yahoo.com>",
    "Eduard-Mihai Burtescu <edy.burt@gmail.com>"
]
repository = "https://github.com/lykenware/gll"
license = "MIT/Apache-2.0"
keywords = ["grammar", "generator", "GLL", "parser"]
readme = "README.md"
description = "GLL parsing framework."
edition = "2018"

[dependencies]
indexmap = "1"
grammer = "0.0.1"
proc-macro2 = "0.4.30"
proc-quote = "0.2.2"

[build-dependencies]
indexmap = "1"
grammer = "0.0.1"
proc-macro2 = "0.4.30"
proc-quote = "0.2.2"

[lib]
doctest = false
test = false

[patch.'crates-io']
grammer = { git = "https://github.com/lykenware/grammer", rev = "6f6f1320336d84b75805907fb302a28cb6d4cfb0" }

[workspace]
members = [
    "macros"
]
