[package]
name = "gll"
version = "0.0.2"
authors = [
    "Ana-Maria <mihalacheana.maria@yahoo.com>",
    "Eduard-Mihai Burtescu <edy.burt@gmail.com>"
]
repository = "https://github.com/lykenware/gll"
license = "MIT/Apache-2.0"
keywords = ["grammar", "generator", "GLL", "parser"]
readme = "README.md"
description = "GLL parsing framework."
edition = "2018"

[dependencies]
indexmap = "1"
grammer = "0.0.1"
proc-macro2 = "0.4.30"
proc-quote = "0.2.2"

[build-dependencies]
indexmap = "1"
grammer = "0.0.1"
proc-macro2 = "0.4.30"
proc-quote = "0.2.2"

[lib]
doctest = false
test = false

[patch.'crates-io']
grammer = { git = "https://github.com/lykenware/grammer", rev = "c36836d09c2f8954b7535d38e9ca57c8a6f5041e" }

[workspace]
members = [
    "macros"
]
