[package]
name = "gll"
version = "0.0.2"
authors = [
    "Ana-Maria <mihalacheana.maria@yahoo.com>",
    "Eduard-Mihai Burtescu <edy.burt@gmail.com>"
]
repository = "https://github.com/lykenware/gll"
license = "MIT/Apache-2.0"
keywords = ["grammar", "generator", "GLL", "parser"]
readme = "README.md"
description = "GLL parsing framework."
edition = "2018"

[dependencies]
indexmap = "1"
grammer = "0.0.1"
proc-macro2 = "1.0.6"
proc-quote = "0.3.0"

[build-dependencies]
indexmap = "1"
grammer = "0.0.1"
proc-macro2 = "1.0.6"
proc-quote = "0.3.0"

[lib]
doctest = false
test = false

[patch.'crates-io']
grammer = { git = "https://github.com/lykenware/grammer", rev = "7850625d06e5f838cd175c109c29642a1bbfa500" }

[workspace]
members = [
    "macros"
]
