[package]
name = "gll-macros"
version = "0.0.2"
authors = [
    "Ana-Maria <mihalacheana.maria@yahoo.com>",
    "Eduard-Mihai Burtescu <edy.burt@gmail.com>"
]
repository = "https://github.com/lykenware/gll"
license = "MIT/Apache-2.0"
description = "Macros used with the gll crate."

[dependencies.gll]
path = ".."
version = "0.0.2"

[dev-dependencies]
quote = "0.6"

[lib]
doctest = false
proc-macro = true
