[package]
name = "gll-tests"
version = "0.1.0"
authors = [
    "Ana-Maria <mihalacheana.maria@yahoo.com>",
    "Eduard-Mihai Burtescu <edy.burt@gmail.com>"
]
repository = "https://github.com/lykenware/lyken"
license = "MIT/Apache-2.0"
description = "Tests for the gll crate."

[dependencies]
gll = { path = ".." }

[build-dependencies]
gll = { path = ".." }

[lib]
doctest = false
